welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:13: error: type mismatch;
 found   : Unit
 required: Int
		return
                ^Program:20: error: type mismatch;
 found   : Unit
 required: Int
		return
                ^