welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
/* Cette fois, vous devez écrire une méthode move(nbPas: Int,versLAvant: Boolean) 
 *  qui se déplace de nbPas pas. 
 *  Si versLAvant est vrai, il faut avancer de ce nombre de pas; dans le cas contraire, 
 *  il faut reculer.
*/

def move(nbPas:Int, versLAvant:Boolean):Int ={
	if (versLAvant==true) {
		for (compteur <- 1 to nbPas) {
			avance()
		}
		return
		}
	
	else {
		for (compteur <- 1 to nbPas) {
			recule()
		}
		return
		}
}
	
	
	

